# deep-learning

./: .gitignore  README.md  cats-or-dogs-classification.ipynb  fast_ai_04_how_neural_nets_work.ipynb  fast_ai_04_mnist_basics.ipynb  pyproject.toml
building_neural_networks/: denoise_images.ipynb  denoise_images_encoder_decoder.ipynb  mnist_recongnizer_convolution.ipynb  mnist_recongnizer_sequential.ipynb
transfer_learning/: fine_tuning_resnet_transfer_learner.ipynb  resnet_transfer_learner.ipynb
