[project]
name = "deep-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "gradio>=5.35.0",
    "ipykernel==6.28.0",
    "llvmlite>=0.44.0",
    "matplotlib>=3.10.3",
    "numpy<2.0",
    "ollama>=0.5.1",
    "onnxmltools>=1.14.0",
    "openai>=1.93.0",
    "pandas>=2.3.0",
    "pinecone-client>=6.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.0",
    "sentence-transformers>=5.0.0",
    "skl2onnx>=1.19.1",
    # --- FIX THESE LINES ---
    "torch==2.2.2", # Changed from "=" to "=="
    "torchvision==0.17.2", # Changed from ">=" to "==" to match torch
    "torchaudio==2.2.2", # Added/fixed this line, ensuring "=="
    # --- END FIX ---
    "torchinfo>=1.8.0",
    "umap-learn>=0.5.9.post2",
    "wandb>=0.21.0",
    "xgboost==2.0.3",
]
